--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/ngx-toastr/toastr.css"
+              "node_modules/ngx-toastr/toastr.css",
+              "./node_modules/swagger-ui/dist/swagger-ui.css"
             ],
             "scripts": [],
             "es5BrowserSupport": true
