--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^8.3.0",
+    "@ngrx/store": "^8.3.0",
     "core-js": "^2.5.4",
+    "ngrx-store-logger": "^0.2.4",
     "ngx-toastr": "^10.2.0",
     "rxjs": "~6.3.3",
+    "swagger-ui": "^3.23.10",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
